# czdb-search-c

./: .gitignore  CMakeLists.txt  DecryptedBlockProject  README.md  byte_utils.c  byte_utils.h  db_searcher.c  db_searcher.h  decrypted_block.c  decrypted_block.h  hyper_header_block.c  hyper_header_block.h  main.c  mimic.lua
tmp/: CZDBSearcher  libdb_searcher.dylib
